--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-streamlit>=1.24.1
-ultralytics>=8.0.98
-opencv-python>=4.7.0.72
+streamlit
+ultralytics
+opencv-python
 Pillow==10.1.0
 streamlit_lottie
 torch
+torchvision
+pafy
